maze.lessons.maze.island.IslandMaze.scala.error
Escaper:13: error: Unit does not take parameters
    choix()()
           ^